plan to add player profile bits

--- a/TODO
+++ b/TODO
@@ -13,3 +13,6 @@ attack on ship = attack * (academy bonus + advanced training bonus + attack trai
 defense on ship = defense * (academy bonus + advanced training bonus + defense training bonus)
 health on ship = health * (academy bonus + advanced training bonus)
 strength on ship = (rank + 1) * (attack on ship + defense on ship + health on ship)
+
+
+permit adding player profile bits
